Improved error logging
Simplifies debugging and extending the code