@@ -37,6 +37,8 @@ import java.util.NoSuchElementException;
 import java.util.concurrent.atomic.AtomicLong;
 import com.google.android.exoplayer.parser.h264.H264Utils.SPS;
 
+import org.apache.http.protocol.HTTP;
+
 /**
  * Created by martin on 31/07/14.
  */
@@ -250,8 +252,7 @@ public class HLSSampleSource implements SampleSource {
     try {
       mainPlaylist = MainPlaylist.parse(this.url);
     } catch (Exception e) {
-      Log.d(TAG, "cannot parse main playlist");
-      e.printStackTrace();
+      Log.d(TAG, "Cannot parse main playlist", e);
 
     }
     if (mainPlaylist == null || mainPlaylist.entries.size() == 0) {
@@ -679,10 +680,10 @@ public class HLSSampleSource implements SampleSource {
         String dataUrl = null;
         String keyUrl = null;
         try {
-          dataUrl = URLEncoder.encode(chunkUrl, "utf-8");
-          keyUrl = URLEncoder.encode(variantEntry.keyEntry.uri, "utf-8");
+          dataUrl = URLEncoder.encode(chunkUrl, HTTP.UTF_8);
+          keyUrl = URLEncoder.encode(variantEntry.keyEntry.uri, HTTP.UTF_8);
         } catch (UnsupportedEncodingException e) {
-          e.printStackTrace();
+          Log.wtf(TAG, HTTP.UTF_8 + " charset not available");
         }
 
         String iv = variantEntry.keyEntry.IV;
@@ -701,7 +702,7 @@ public class HLSSampleSource implements SampleSource {
       try {
         dataSource.open(dataSpec);
       } catch (IOException e) {
-        e.printStackTrace();
+        Log.e(TAG, "Error reading encrypted data source", e);
         exception = e;
         return null;
       }
@@ -718,7 +719,7 @@ public class HLSSampleSource implements SampleSource {
         try {
           extractor = new TSExtractorWithParsers(dataSource, allocatorsMap);
         } catch (ParserException e) {
-          e.printStackTrace();
+          Log.e(TAG, "Error parsing TS", e);
           exception = e;
           return null;
         }
@@ -729,8 +730,7 @@ public class HLSSampleSource implements SampleSource {
         try {
           sample = extractor.read();
         } catch (ParserException e) {
-          Log.e(TAG, "extractor read error");
-          e.printStackTrace();
+          Log.e(TAG, "Extractor read error", e);
           exception = e;
           break;
         }
@@ -802,7 +802,7 @@ public class HLSSampleSource implements SampleSource {
       try {
         dataSource.close();
       } catch (IOException e) {
-        e.printStackTrace();
+        Log.e(TAG, "Could not close data source", e);
       }
 
       return null;
